--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div role="main" class="content clearfix">
       <article class="clearfix">
         <header class="clearfix center">
-          <h2>Next meetup on December 12th<sup>th</sup></h2>
+          <h2>Next meetup on December 12<sup>th</sup></h2>
         </header>
         <!-- TALKS -->
         <section class="clearfix">
