- Removed all the unused images - Fixed the grid system a little - New react.berlin logo in svg - Removed some unused css

--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   </head>
   <body>
-    <header role="banner" class="clearfix">
+    <header role="banner" class="content clearfix">
       <div class="clearfix">
         <h1>
-          <a href="/" title="ReactJS.berlin">
-            <img alt="ReactJS.berlin logo" src="img/logo.png" class="logo logo-default" />
-            <img alt="ReactJS.berlin logo" src="img/logo-x2.png" class="logo logo-2x" aria-hidden="true" />
-            <img alt="ReactJS.berlin logo" src="img/logo-s.png" class="logo logo-s" aria-hidden="true" />
+          <a href="/">
+            <img alt="ReactJS.berlin" src="img/react-berlin-logo.svg" class="logo" />
           </a>
         </h1>
         <p class="ug-info triangle-border left">
@@ -54,7 +52,7 @@
         </p>
       </div>
     </header>
-    <div role="main" class="content clearfix">
+    <main role="main" class="content clearfix">
       <article class="clearfix">
         <header class="clearfix center">
           <h2>Next meetup on December 12<sup>th</sup></h2>
@@ -114,9 +112,9 @@
           </div>
         </section>
       </article>
+    </main>
 
-    </div>
-    <footer role="complimentary">
+    <footer class="content" role="complimentary">
       <div class="clearfix three-cols">
         <div>
           <h2>Get in touch</h2>
