--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta http-equiv="expires" content="0">
     <meta http-equiv="expires" content="Thu, 01 Jan 1970 13:37:00 GMT">
     <meta http-equiv="pragma" content="no-cache">
-    <link rel="shortcut icon" href="favicon.ico">
+
     <link rel="stylesheet" media="screen" href="css/style.css?v=1">
     <link rel="stylesheet" media="print" href="css/print.css?v=1">
 
@@ -23,15 +23,15 @@
     <link rel="stylesheet" media="only screen and (min-width: 768px)" href="css/768.css?v=1">
     <link rel="stylesheet" media="only screen and (min-width: 992px)" href="css/992.css?v=1">
     <link rel="stylesheet" media="only screen and (min-width: 1382px)" href="css/1382.css?v=1">
-
     <link rel="stylesheet" media="only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2)" href="css/2x.css?v=1">
 
     <link href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet" type="text/css">
 
-    <link rel="apple-touch-icon-precomposed" href="http://reactjs.berlin/apple-touch-icon-precomposed.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="http://reactjs.berlin/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="http://reactjs.berlin/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="http://reactjs.berlin/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00d8ff">
+    <meta name="theme-color" content="#00d8ff">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
