[#10] update google analytics

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p class="ug-info triangle-border left">
           ReactJS.berlin is a usergroup focused on ReactJS and related
      topics. We meet regularly on the 2nd Monday each month at 7p.m.
-          <a href="http://bitcrowd.net" title="bitcrowd.net Office">@bitcrowd Office</a>,
+          <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd Office</a>,
           Oranienstr. 6 in Berlin-Kreuzberg. Talks start at 7:30pm.
         </p>
       </div>
@@ -159,7 +159,6 @@
               Any harmful or discriminating behaviour will not be tolerated and results
               in the offending person being expelled from the meetup.
             </p>
-
             <p>
               For details on what kinds of behaviour are not tolerated and consequences for violating these rules, we refer to the <a href="http://rubyberlin.github.io/code-of-conduct">Berlin Code of Conduct</a>.
             </p>
@@ -167,10 +166,11 @@
           <div>
             <h2>Privacy Policy and leagal</h2>
             <p>
-              This site is run by , you find all leagal information <a href="http://bitcrowd.net" title="bitcrowd.net software development legal">here</a>.
+              This site is run by
+              <a href="http://bitcrowd.net" title="bitcrowd.net software development for startups">@bitcrowd</a>.
+              You can find all leagal information <a href="http://bitcrowd.net" title="bitcrowd.net software development legal">here</a>.
             </p>
           </div>
-        </div>
       </section>
     </footer>
     <script>
