[#10] update google analytics - ammendments from PR comments

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>ReactJS.berlin &mdash; Berlin's ReactJS Usergroup</title>
     <meta name="description" content="ReactJS.berlin is a usergroup focused on ReactJS and related
-     topics. We meet regularly on the 3rd Monday each month at 7:30 p.m. @bitcrowd Office,
+     topics. We meet regularly on the 3rd Monday each month at 7:30 p.m. @bitcrowd office,
      Oranienstr. 6 in Berlin-Kreuzberg.">
     <meta name="keywords" content="ReactJS, JavaScript, Usergroup, Berlin, Programming, JS">
     <meta name="author" content="ReactJS.berlin">
@@ -47,7 +47,7 @@
         <p class="ug-info triangle-border left">
           ReactJS.berlin is a usergroup focused on ReactJS and related
      topics. We meet regularly on the 2nd Monday each month at 7p.m.
-          <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd Office</a>,
+          <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd office</a>,
           Oranienstr. 6 in Berlin-Kreuzberg. Talks start at 7:30pm.
         </p>
       </div>
@@ -167,10 +167,11 @@
             <h2>Privacy Policy and leagal</h2>
             <p>
               This site is run by
-              <a href="http://bitcrowd.net" title="bitcrowd.net software development for startups">@bitcrowd</a>.
-              You can find all leagal information <a href="http://bitcrowd.net" title="bitcrowd.net software development legal">here</a>.
+              <a href="http://bitcrowd.net" title="bitcrowd.net software development for startups">bitcrowd</a> -
+              please find <a href="http://bitcrowd.net/legal" title="bitcrowd.net software development legal information">imprint, privacy and other legal information here</a>.
             </p>
           </div>
+        </div>
       </section>
     </footer>
     <script>
