--- a/index.html
+++ b/index.html
@@ -136,8 +136,10 @@
             ReactJS.berlin is organized by
             <a href="http://www.twitter.com/chris_bitcrowd" title="Follow Chris on Twitter">Christoph Beck</a>,
             <a href="https://twitter.com/keinehobbies" title="Follow Pascal on Twitter">Pascal Weiland</a> &amp;
-            <a href="http://www.twitter.com/" title="Follow Paul on Twitter">Paul Meinhardt</a>.
-            Design by <a href="http://www.twitter.com/m_besser" title="Follow Matti on Twitter">Matti Besser</a>.
+            <a href="http://www.twitter.com/" title="Follow Paul on Twitter">Paul Meinhardt</a>
+            from
+            <a href="http://www.twitter.com/bitcrowd" title="Follow bitcrowd on Twitter">@bitcrowd</a>.
+            Design by <a href="http://www.twitter.com/m_besser" title="Follow Matti on Twitter">Matti Besser</a> &amp; <a href="http://www.twitter.com/plankton" title="Follow Darren on Twitter">Darren Cadwallader</a>.
           </p>
         </div>
         <div>
@@ -162,6 +164,7 @@
             For details on what kinds of behaviour are not tolerated and consequences for violating these rules, we refer to the <a href="http://rubyberlin.github.io/code-of-conduct">Berlin Code of Conduct</a>.
           </p>
         </div>
+
       </div>
       </section>
     </footer>
