[#10] update google analytics - ammendments from PR comments

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </p>
           </div>
           <div>
-            <h2>Privacy Policy and leagal</h2>
+            <h2>Imprint, privacy policy and legal information</h2>
             <p>
               This site is run by
               <a href="http://bitcrowd.net" title="bitcrowd.net software development for startups">bitcrowd</a> -
