--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>ReactJS.berlin &mdash; Berlin's ReactJS Usergroup</title>
     <meta name="description" content="ReactJS.berlin is a usergroup focused on ReactJS and related
-     topics. We meet regularly on the 3rd Monday each month at 7:30 p.m. @bitcrowd Office,
+     topics. We meet regularly on the 3rd Monday each month at 7:30 p.m. @bitcrowd office,
      Oranienstr. 6 in Berlin-Kreuzberg.">
     <meta name="keywords" content="ReactJS, JavaScript, Usergroup, Berlin, Programming, JS">
     <meta name="author" content="ReactJS.berlin">
@@ -47,7 +47,7 @@
         <p class="ug-info triangle-border left">
           ReactJS.berlin is a usergroup focused on ReactJS and related
      topics. We meet regularly on the 2nd Monday each month at 7p.m.
-          <a href="http://bitcrowd.net" title="bitcrowd.net Office">@bitcrowd Office</a>,
+          <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd office</a>,
           Oranienstr. 6 in Berlin-Kreuzberg. Talks start at 7:30pm.
         </p>
       </div>
@@ -150,32 +150,37 @@
         </div>
       </div>
       <section>
-      <div class="clearfix one-col">
-        <div>
-          <h2>Code of Conduct</h2>
-          <p>
-            Our goal is to have an awesome, inclusive and safe community meetup where people meet,
-            hang out together, chat, listen to talks, exchange ideas and make new friends.
-            Any harmful or discriminating behaviour will not be tolerated and results
-            in the offending person being expelled from the meetup.
-          </p>
-
-          <p>
-            For details on what kinds of behaviour are not tolerated and consequences for violating these rules, we refer to the <a href="http://rubyberlin.github.io/code-of-conduct">Berlin Code of Conduct</a>.
-          </p>
+        <div class="clearfix one-col">
+          <div>
+            <h2>Code of Conduct</h2>
+            <p>
+              Our goal is to have an awesome, inclusive and safe community meetup where people meet,
+              hang out together, chat, listen to talks, exchange ideas and make new friends.
+              Any harmful or discriminating behaviour will not be tolerated and results
+              in the offending person being expelled from the meetup.
+            </p>
+            <p>
+              For details on what kinds of behaviour are not tolerated and consequences for violating these rules, we refer to the <a href="http://rubyberlin.github.io/code-of-conduct">Berlin Code of Conduct</a>.
+            </p>
+          </div>
+          <div>
+            <h2>Imprint, privacy policy and legal information</h2>
+            <p>
+              This site is run by
+              <a href="http://bitcrowd.net" title="bitcrowd.net software development for startups">bitcrowd</a> -
+              please find <a href="http://bitcrowd.net/legal" title="bitcrowd.net software development legal information">imprint, privacy and other legal information here</a>.
+            </p>
+          </div>
         </div>
-
-      </div>
       </section>
     </footer>
     <script>
-      var _gaq = [['_setAccount','UA-25036346-1'],['_trackPageview']];
-      (function(d, t) {
-        var g = d.createElement(t),
-            s = d.getElementsByTagName(t)[0];
-        g.async = g.src = '//www.google-analytics.com/ga.js';
-        s.parentNode.insertBefore(g, s);
-      }(document, 'script'));
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-87838740-1', 'auto');
+      ga('send', 'pageview');
     </script>
   </body>
 </html>
