[#11] add the reference to berlinjs.org

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
           <h2>Supporters</h2>
           <p>
             Our Meetups are hosted by <a href="http://bitcrowd.net">bitcrowd.net</a>.
+            The template for this page is the gloriuos <a href="http://berlinjs.org/" title="Berlin's finest JavaScript Usergroup">berlinjs.org page</a> with kind permission of <a href="http://www.twitter.com/rmehner" title="Follow Robin on Twitter">Robin Mehner</a>.
           </p>
         </div>
       </div>
