--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
               <h3>Flowtype: Let's Build a Great Typing Experience with 3rd Party Modules</h3>
               <p class="speaker-name">Patrick Stapfer - <a href="https://twitter.com/ryyppy" target="parent">@ryyppy</a></p>
               <p>
-                Flowtype is a great tool to statically type your JavaScript code... but a type system is only useful as soon as all external 
+                Flowtype is a great tool to statically type your JavaScript code... but a type system is only useful as soon as all external
                 dependencies are typed as well.
               </p>
               <p>
-                There are two ways to vendor flow typings for your third party modules. In this talk, I want to 
-                explain how you can consume and deliver flow typings without any troubles and reap the benefits of 
-                a nicely typed codebase. 
+                There are two ways to vendor flow typings for your third party modules. In this talk, I want to
+                explain how you can consume and deliver flow typings without any troubles and reap the benefits of
+                a nicely typed codebase.
               </p>
               <p>
               <b>About me:</b> I am a huge flowtype enthusiast and have been using this tool for almost a year and had a long way to go before
-              I really understood the tooling and the ecosystem around it. 
+              I really understood the tooling and the ecosystem around it.
               </p>
               <p>
               I was part of the <a href="https://github.com/flowtype/flow-typed" target="parent">flow-typed</a> project from day #1 and
@@ -109,14 +109,14 @@
 
             <div class="speaker">
               <h3>Easily create Redux-based apps with React Native</h3>
-              <p class="speaker-name">Wojciech Ogrodowczyk - <a href="https://twitter.com/yoshuawuyts" target="parent">@sharnik</a></p>
+              <p class="speaker-name"> Wojciech Ogrodowczyk - <a href="https://twitter.com/sharnik" target="parent">@sharnik</a></p>
               <p>
                 In this talk we'll get a simple introduction what benefits would using Redux bring to our React Native applications
-                and how to use Ignite - a framework for React Native applications - to get started with it easily and painlessly. 
+                and how to use Ignite - a framework for React Native applications - to get started with it easily and painlessly.
                 We'll live-code a small feature to see how easy it is to use in practise.
               </p>
               <p>
-                Wojciech runs a development consultancy <a href="http://brainsandbeards.com">Brains&amp;Beards</a> where he builds 
+                Wojciech runs a development consultancy <a href="http://brainsandbeards.com">Brains&amp;Beards</a> where he builds
                 cool mobile products and teaches others how to do that as well.
               </p>
             </div>
